# cmakeSDL2fetch

./: CMakeLists.txt  sdl2window.cpp
docs/: ref.md
